Add a JavaFX chatbot with delayed replies
Make Ekko usable through a graphical conversation while reusing its
existing commands and task storage. Add a separate Launcher, recovery
confirmation, and visible file-access errors.

Show a thinking indicator for 750 ms before processing each command.
Prevent duplicate submissions and cancel pending work on window close.

Upgrade JavaFX to 25.0.2 and enable native access for Gradle launches,
tests, and the executable JAR. Document GUI usage and cover delayed
responses, persistence, recovery, and failures with JUnit tests.